tests/errors/syn_method33.java
public class syn_method33 {
static String[] main ( ) {
 
}
}